k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      containers:
      - name: app
        image: ghcr.io/majeeedshaikh/devops-demo:latest
        ports:
        - containerPort: 8080
