k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-svc
  namespace: default
spec:
  selector:
    app: devops-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9091
      targetPort: 9091
  type: ClusterIP
