k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
  - host: devops.local
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: devops-demo-svc
            port:
              number: 80
